# emilbot

./: Cargo.toml  README.md  bun.lockb  example.env  main.ts  package.json  readme.md
src/: auth.rs  main.rs
